<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MenuActivityActivity">

    <RelativeLayout
        android:id="@+id/speed_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:background="@color/purple_200"
        android:orientation="vertical">

        <!--displaying a simple text view-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/radioGroup_speed"
            android:layout_margin="15dp"
            android:text="@string/choose_speed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--displaying a radio group on below line-->
        <RadioGroup
            android:id="@+id/radioGroup_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:gravity="center">

            <!--adding a radio button -->
            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/easy_mode"
                android:textAlignment="center"
                android:textSize="20sp" />

            <!--adding a radio button -->
            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/hard_mode"
                android:textAlignment="center"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sensors_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/speed_layout"
        android:background="@color/purple_200"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/radioGroup_sensor"
            android:layout_margin="15dp"
            android:text="@string/choose_sensor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--displaying a radio group on below line-->
        <RadioGroup
            android:id="@+id/radioGroup_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:gravity="center">

            <!--adding a radio button -->
            <RadioButton
                android:id="@+id/javaRB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/sensors_mode"
                android:textAlignment="center"
                android:textSize="20sp" />

            <!--adding a radio button -->
            <RadioButton
                android:id="@+id/cRB"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:padding="4dp"
                android:text="@string/arrows_mode"
                android:textAlignment="center"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sensors_layout"
        android:layout_centerInParent="true"
        android:text="@string/submit"
        android:enabled="false"
        android:onClick="onSubmit">

    </Button>
</RelativeLayout>